# DaddySoccer

./: .gitmodules  CMakeLists.txt  README.md
data/: png_to_bmp_with_transparency.py
ext/: CMakeLists.txt
sdlpp/: CMakeLists.txt  sdlpp.h  sdlpp_common.h  sdlpp_joystick.cpp  sdlpp_joystick.h  sdlpp_pixels.cpp  sdlpp_pixels.h  sdlpp_renderer.cpp  sdlpp_renderer.h  sdlpp_surface.cpp  sdlpp_surface.h  sdlpp_timer.h  sdlpp_ttf.cpp  sdlpp_ttf.h  sdlpp_video.cpp  sdlpp_video.h
src/: bouncedobject.cpp  bouncedobject.h  displayobject.cpp  displayobject.h  geometry.cpp  geometry.h  main.cpp  mainwindow.cpp  mainwindow.h
